Deletar motorista feito
